--- a/Doku/cedrik_hoffmann/README.adoc
+++ b/Doku/cedrik_hoffmann/README.adoc
@@ -6,45 +6,133 @@ Cedrik Hoffmann | 670339 | cedrik.hoffmann@stud.hs-flensburg.de
 :imagesdir: img
 
 == Einleitung
-Auf dem bereits bekannten `MVVM-Grundgerüst` wird ein neues Feature eingebaut. Das Feature soll eine Druckfunktion der gespeicherten Bücher ermöglichen. Dazu wird ein neues UI-Fenster erstellt. In der UI kann der Benutzer eine Auswahl an Büchern mittels einer `Checkbox` auswählen. Wird ein Buch angewählt, erscheint im Fenster eine deateiliertere Ansicht mit den entsprechen Metadaten zu den gewählten Buch.
+Auf dem bereits bekannten `MVVM-Grundgerüst` wird ein neues Feature eingebaut. Das Feature soll eine Druckfunktion der gespeicherten Bücher ermöglichen. Dazu wird ein neues Ui-Fenster erstellt. In der Ui kann der Benutzer eine Auswahl an Büchern  in einer `ListView` auswählen. Das angeklickte Buch wird im Bereich `Book Preview` im Detail angezeigt. Mit dem Button `Add` wird das gewählte Buch zum Drucken makiert. Es können mehrere Bücher ausgewählt werden. Die ausgewählten Bücher werden im Bereich `Selected Books` eingesehen werden. Zudem hat der BEnutzer die möglichkeit, ein Buch aus der Liste wieder zu entfernen.
 
-== Demo Bücher
-Zum Testen wurde eine eigene Methode geschreiben, welche Bücher in der `BookCollectionViewModel` hinzufügt. Um sicher zustellen, das alle Metadaten abgedeckt werden, werden hier alle `Properties` abgedeckt.
+=== Erstellte Datein
+Auf das `MVVM-Grundgerüst` wurden folgende `Datein / Klassen / Klassenbibliotheken` erstellt:
+[listing]
+----
+Logic
+|-- Logig.Ui
+|   |-- MessageBusMessages
+|   |   |--+ OpenPrintServiceWindowMessage.cs
+|   | 
+|   |-- ViewModel
+|   |   |--+ PrintServiceWindowViewModel.cs
+
+Ui
+|-- Ui.Desktop
+|   |--+ PrintServiceWindow.xaml
+|   |--+ PrintServiceWindow.xaml.cs
+
+Services
+|--+ Services.PrintService
+|    |--+ PrintBookService.cs
+----
+
+`PrintServiceWindow.xaml` wird für die Ui verwendet. `PrintServiceWindow.xaml` hat über den `ViewModelLocator` zugriff auf das ViewModel `PrintServiceWindowViewModel.cs`. Hier ist die Logic der Ui definiert. 
+
+`OpenPrintServiceWindowMessage.cs` wurde erstellt, damit über den `MessageBus` aus dem `MainWindow` die Ui geöffnet wird.
+
+== Aufbau / Funktion der Ui
+Im Folgenden werden die einzelnen Design entscheidungen und Ui Funktionen beschrieben.
+
+.Ansicht Ui
+image:UI.PNG[]
+
+=== Layout
+Das Layout wird weitesgehend mittels `Grid` realisiert. Knapp 1/3 der Ui wird für die Auswahl / Hinzufügen / Entfernen / Buttons der Bücher verwendet. Der restliche Bereich ist für die Darstellung der Bücher im Detail vorgesehen. In den jeweiligen `Grid.Colums` werden weitere `Grids` mit `Grid.RowDefinitons` definiert (siehe Abbildung).
+
+|===
+|image:GridLayoutGlobal.png[] |image:GridLayoutRow.png[]
+
+|Diese Abbildung illustriert die Aufteilung des "Globalen Grids". 
+|Diese Abbildung illustriert die Aufteilung der einzelnen Reihen der Komponenten. 
+|===
+
+=== Auswahl Bücher
+Die gespiecherten Bücher sind im `ViewModel` in der `BookCollectionViewModel` gespeichert. Beim Aufruf des Ui-Fensters wird die `BookCollectionViewModel` an das `PrintServiceWindowViewModel` übergeben. Da die Ui zugriff auf die `PrintServiceWindowViewModel` hat, kann die Ui bzw. die `ListView` auf die Collection zugreifen und somit in der Ui anzeigen.
+
+=== BookPreview Funktion
+image:BookPreview.gif[]
+
+Die Preview Funktion erfolgt durch `Binding` an das aktuell ausgewählte Element in der `ListView`. Die Eigenschaften des ausgewählte Elements bzw. Buch aus `BookViewModel` wird in der entsprechenden `TextBox` ausgegeben.
+
+[source, xaml]
+----
+<TextBlock FontWeight="Bold" Text="Title: "/>
+<TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Title}"/>
+<TextBlock FontWeight="Bold" Text="Author: "/>
+<TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Author}"/>
+<TextBlock FontWeight="Bold" Text="Weight: "/>
+<TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Weight}"/>
+----
+
+=== Bücher zum drucken hinzufügen
+image:AddBooks.gif[]
+
+Wenn der Benutzer ein oder mehrere Bücher auswählt, werden diese in eine neue Collection gespeichert, welche anschließend an das `Service.PrintService` zum Drucken weitergeben werden. Die ausgewählten Bücher werden mittels des Buttons `Add` an das ViewModel übergeben. Über das `RelayCommand mit Parametern` werden die Bücher in der `ListView` als `System.Windows.Controls.SelectedItemCollection` an das `ViewModel` übergeben. Ähnliche Logik verbirgt sich auch hinter den Button `Remove`. Unterschied hierbei ist, das die ausgewählten Bücher nicht der Collection hinzugefügt, sondern entfernt werden. 
+
+[source, xaml]
+----
+<Button Content="Add" Margin="0,5,5,5" 
+    CommandParameter="{Binding ElementName=BookListBox, Path=SelectedItems}" 
+    Command="{Binding AddSelectedBookToCollection}"  />
+<Button Content="Remove" Margin="5,5,0,5" 
+    CommandParameter="{Binding ElementName=BookListBox, Path=SelectedItems}" 
+    Command="{Binding RemoveSelectedBookToCollection}" />
+----
+
+Der Bereich `Selected Books` zeigt die entsprechende Collection, der ausgewählten Bücher an. Dies ist auch eine `ListView`, welche auf die `CheckedBooks` vom Typ `BookCollectionViewModel` zugreift. Diese `ListView` wurde die Eigenschaft des anwählens entfernt. 
+
+[source, xaml]
+----
+<ListView Grid.Row="4" ItemsSource="{Binding CheckedBooks}">
+    <ListView.ItemContainerStyle>
+        <Style TargetType="ListViewItem">
+            <Setter Property="Focusable" Value="False"/>
+        </Style>
+    </ListView.ItemContainerStyle>
+    <ListView.ItemTemplate>
+        <DataTemplate>
+            <TextBlock Text="{Binding Title}" />
+        </DataTemplate>
+    </ListView.ItemTemplate>
+</ListView>
+----
+
+== ViewModel
+Im `ViewModel` ist die Logik der Ui definiert. Hier werden die überlegungen und Funktionen kurz beschrieben.
+
+=== Verfügbare Properties
+- Die Property `BookList` beinhaltet alle bereits angelegten Bücher.
+- In der Property `CheckedBooks` werden alle Bücher abgespeichert, welche der Benutzer zum drucken ausgewählt hat.
+- Die Properties `PrintBooks, CloseWindow` werden zum starten des Druckvorgangs, bzw. zum shcließen des Fensters verwendet.
+- Die Properties `AddSelectedBookToCollection, RemoveSelectedBookToCollection` werden zum hinzufügen, bzw. entfernen der ausgewählten Bücher in `CheckedBooks Collection`.
+
+
+=== Funktion
+Im folgenden wird die Funktionsweise von der Funktion `AddSelectedBookToCollectionCommand` beschrieben.
 
 [source, c#]
 ----
-private void CreateDemoBooks() {
-    // DEMO BOOKS
-    Console.WriteLine("Create Demo Books...");
-    for (int i = 1; i <= 10; i++) {
-        BookViewModel book = new BookViewModel();
-        book.Title = "Book #" + i;
-        book.Author = "Author #" + i;
-        book.Publisher = "Publisher #" + i;
-        book.Description = "Lorem ipsum dolor sit amet, ...";
-        book.Extract = "Lorem ipsum dolor sit amet, ...";
-        book.Genre = Business.Model.BusinessObjects.ENUM.Genre.Horror;
-        book.Language = Business.Model.BusinessObjects.ENUM.Language.Deutsch;
-        book.Format = Business.Model.BusinessObjects.ENUM.Format.Taschenbuch;
-        book.Price = 2.3M;
-        book.Pages = 120;
-        book.Weight = 10;
-        book.Isbn = "ISBN " + i + "-" + i + 7645 + "-" + i + 2641 + "-" + i + 1;
-        book.Rating = 2.4;
-        book.Edition = i;
-        book.Bestseller = i % 2 == 0;
-        book.ReleaseDate = new DateTime();
+private void AddSelectedBookToCollectionCommand(object param)
+{
+    System.Collections.IList items = (System.Collections.IList)param; <1>
+    var collection = items.Cast<BookViewModel>(); <2>
 
-        Business.Model.BusinessObjects.Dimension dimension = new Business.Model.BusinessObjects.Dimension();
-        dimension.Depth = 1 * (i + 1);
-        dimension.Height = 2 * (i + 1);
-        dimension.Width = 3 * (i + 1);
-        book.Dimension = dimension;
-
-        Image image = Image.FromFile(@"C:\Users\hoffmann\Documents\FH Flensburg\AWP\image\" + i + ".png");
-        book.Cover = image;
-        BookList.Add(book);
+    foreach (BookViewModel book in collection) <3>
+    {
+        if(!CheckItemIsInCheckedBooks(book)) <4>
+        {
+            CheckedBooks.Add(book); 
+        }
     }
 }
 ----
+<1> Hier wird das übergebene Objekt, welches vom Typ `System.Windows.Controls.SelectedItemCollection` stammt in einer neuen Liste gespeichert.
+<2> Hier wird die Liste in eine neue Liste vom Typ `BookViewModle` gecastet.
+<3> Nun wird die Colletion durchgegangen und in der `CheckedBooks Collection` hinzugefügt
+<4> `CheckItemIsInCheckedBooks` ist eine Hilfsmethode, welche überprüft, ob ein Buch bereits in der `CheckedBooks Collection` vorhanden ist. Ist dies der Fall, wird dieses Buch dementsprechend nicht nochmal hinzugefügt.
 
+== Service.PrintService
