--- a/README.adoc
+++ b/README.adoc
@@ -7,3 +7,6 @@
 image:uml.png[]
 
 *NOTE:* Die Klasse `Size` wurde wegen Namenskonflikten zu `Dimension` umbenannt
+
+== Dokumentation
+- https://github.com/choffmann/hsfl-awp-clientapp011/tree/cedrik/Doku/cedrik_hoffmann[cedrik_hoffmann]
