--- a/Doku/cedrik_hoffmann/README.adoc
+++ b/Doku/cedrik_hoffmann/README.adoc
@@ -6,7 +6,7 @@ Cedrik Hoffmann | 670339 | cedrik.hoffmann@stud.hs-flensburg.de
 :imagesdir: img
 
 == Einleitung
-Auf dem bereits bekannten `MVVM-Grundgerüst` wird ein neues Feature eingebaut. Das Feature soll eine Druckfunktion der gespeicherten Bücher ermöglichen. Dazu wird ein neues Ui-Fenster erstellt. In der Ui kann der Benutzer eine Auswahl an Büchern  in einer `ListView` auswählen. Das angeklickte Buch wird im Bereich `Book Preview` im Detail angezeigt. Mit dem Button `Add` wird das gewählte Buch zum Drucken makiert. Es können mehrere Bücher ausgewählt werden. Die ausgewählten Bücher werden im Bereich `Selected Books` eingesehen werden. Zudem hat der BEnutzer die möglichkeit, ein Buch aus der Liste wieder zu entfernen.
+Auf dem bereits bekannten `MVVM-Grundgerüst` wird ein neues Feature eingebaut. Das Feature soll eine Druckfunktion der gespeicherten Bücher ermöglichen. Dazu wird ein neues Ui-Fenster erstellt. In der Ui kann der Benutzer eine Auswahl an Büchern in einer `ListView` auswählen. Das angeklickte Buch wird im Bereich `Book Preview` im Detail angezeigt. Mit dem Button `Add` wird das gewählte Buch zum Drucken makiert. Es können mehrere Bücher ausgewählt werden. Die ausgewählten Bücher können im Bereich `Selected Books` eingesehen werden. Zudem hat der Benutzer die möglichkeit, ein Buch aus der Liste wieder zu entfernen.
 
 === Erstellte Datein
 Auf das `MVVM-Grundgerüst` wurden folgende `Datein / Klassen / Klassenbibliotheken` erstellt:
@@ -30,18 +30,19 @@ Services
 |    |--+ PrintBookService.cs
 ----
 
-`PrintServiceWindow.xaml` wird für die Ui verwendet. `PrintServiceWindow.xaml` hat über den `ViewModelLocator` zugriff auf das ViewModel `PrintServiceWindowViewModel.cs`. Hier ist die Logic der Ui definiert. 
-
-`OpenPrintServiceWindowMessage.cs` wurde erstellt, damit über den `MessageBus` aus dem `MainWindow` die Ui geöffnet wird.
+- `PrintServiceWindow.xaml` wird für die Ui verwendet.
+- `PrintServiceWindowViewModel.cs` beschreibt das `ViewModel` zur `View`. `PrintServiceWindow.xaml` hat über den `ViewModelLocator` zugriff auf das ViewModel `PrintServiceWindowViewModel`
+- `OpenPrintServiceWindowMessage.cs` wurde erstellt, damit über den `MessageBus` aus dem `MainWindow` die Ui geöffnet wird.
+- `Services.PrintService` ist somit die entsprechende Klassenbibliothek, welche die Druckfunktion ermöglicht.
 
 == Aufbau / Funktion der Ui
-Im Folgenden werden die einzelnen Design entscheidungen und Ui Funktionen beschrieben.
+Im Folgenden werden die einzelnen Design Entscheidungen und Ui-Funktionen beschrieben.
 
 .Ansicht Ui
 image:UI.PNG[]
 
 === Layout
-Das Layout wird weitesgehend mittels `Grid` realisiert. Knapp 1/3 der Ui wird für die Auswahl / Hinzufügen / Entfernen / Buttons der Bücher verwendet. Der restliche Bereich ist für die Darstellung der Bücher im Detail vorgesehen. In den jeweiligen `Grid.Colums` werden weitere `Grids` mit `Grid.RowDefinitons` definiert (siehe Abbildung).
+Das Layout wird weitesgehend mittels `Grid` realisiert. Knapp 1/3 der Ui wird für die `Auswahl / Hinzufügen / Entfernen / Buttons` der Bücher verwendet. Der restliche Bereich ist für die Darstellung der Bücher im Detail. In der Abbildung ist eine grobe Skizze des Layout zu sehen. 
 
 |===
 |image:GridLayoutGlobal.png[] |image:GridLayoutRow.png[]
@@ -71,7 +72,7 @@ Die Preview Funktion erfolgt durch `Binding` an das aktuell ausgewählte Element
 === Bücher zum drucken hinzufügen
 image:AddBooks.gif[]
 
-Wenn der Benutzer ein oder mehrere Bücher auswählt, werden diese in eine neue Collection gespeichert, welche anschließend an das `Service.PrintService` zum Drucken weitergeben werden. Die ausgewählten Bücher werden mittels des Buttons `Add` an das ViewModel übergeben. Über das `RelayCommand mit Parametern` werden die Bücher in der `ListView` als `System.Windows.Controls.SelectedItemCollection` an das `ViewModel` übergeben. Ähnliche Logik verbirgt sich auch hinter den Button `Remove`. Unterschied hierbei ist, das die ausgewählten Bücher nicht der Collection hinzugefügt, sondern entfernt werden. 
+Wenn der Benutzer ein oder mehrere Bücher auswählt, werden diese in einer neue `Collection` gespeichert, welche anschließend an die Klassenbibliothek  `Service.PrintService` zum drucken weitergeben werden. Die ausgewählten Bücher werden mittels des Buttons `Add` an das ViewModel übergeben. Über das `RelayCommand mit Parametern` werden die Bücher in der `ListView` als `System.Windows.Controls.SelectedItemCollection` an das `ViewModel` übergeben. Ähnliche Logik verbirgt sich auch hinter den Button `Remove`. Unterschied hierbei ist, dass die ausgewählten Bücher nicht der Collection hinzugefügt, sondern entfernt werden. Die Logik hinter den Buttons verbirgt sich im `ViewModel`, welche im Kapitel https://github.com/choffmann/hsfl-awp-clientapp011/tree/cedrik/Doku/cedrik_hoffmann#viewmodel[ViewModle] erläutert werden.
 
 [source, xaml]
 ----
@@ -83,7 +84,7 @@ Wenn der Benutzer ein oder mehrere Bücher auswählt, werden diese in eine neue 
     Command="{Binding RemoveSelectedBookToCollection}" />
 ----
 
-Der Bereich `Selected Books` zeigt die entsprechende Collection, der ausgewählten Bücher an. Dies ist auch eine `ListView`, welche auf die `CheckedBooks` vom Typ `BookCollectionViewModel` zugreift. Diese `ListView` wurde die Eigenschaft des anwählens entfernt. 
+Der Bereich `Selected Books` zeigt die entsprechende Collection der ausgewählten Bücher an. Diese Komponente ist auch eine `ListView`, welche auf die `CheckedBooks` vom Typ `BookCollectionViewModel` zugreift. Diese `ListView` wurde die Eigenschaft des anwählens mittels dem Parameter `<ListView.ItemContainerStyle>` entfernt.
 
 [source, xaml]
 ----
@@ -102,14 +103,13 @@ Der Bereich `Selected Books` zeigt die entsprechende Collection, der ausgewählt
 ----
 
 == ViewModel
-Im `ViewModel` ist die Logik der Ui definiert. Hier werden die überlegungen und Funktionen kurz beschrieben.
+Im `ViewModel` ist die Logik der Ui definiert. Hier werden die Properties und Funktionen kurz beschrieben.
 
 === Verfügbare Properties
 - Die Property `BookList` beinhaltet alle bereits angelegten Bücher.
 - In der Property `CheckedBooks` werden alle Bücher abgespeichert, welche der Benutzer zum drucken ausgewählt hat.
 - Die Properties `PrintBooks, CloseWindow` werden zum starten des Druckvorgangs, bzw. zum shcließen des Fensters verwendet.
 - Die Properties `AddSelectedBookToCollection, RemoveSelectedBookToCollection` werden zum hinzufügen, bzw. entfernen der ausgewählten Bücher in `CheckedBooks Collection`.
-
 
 === Funktion
 Im folgenden wird die Funktionsweise von der Funktion `AddSelectedBookToCollectionCommand` beschrieben.
