--- a/README.adoc
+++ b/README.adoc
@@ -14,4 +14,4 @@ image:uml.png[]
 - `RelayCommand` wurde durch `RelayCommand mit Parametern` ausgetauscht
 - `MainWindow` wurde überarbeitet. Mehrere `Buttons` sind sichtbar, welche zu den jeweiligen Features führen kann. 
 - Der erste Button im `MainWindow` füllt die `BookCollectionViewModel` mit 10 verschiedenen Büchern. Metadaten wie `Title`, `Author`, `Language`, `Cover` usw. werden befüllt.
-- Serialisierung wurde implementiert, dafür musste im Model in der Klasse `Dimension` das Attributen `[Serilisable]` hinzugefügt werden (siehe https://github.com/choffmann/hsfl-awp-clientapp011/pull/1[Pull request #1])
+- Serialisierung wurde implementiert, dafür musste im Model in der Klasse `Dimension` das Attributen `[Serializable]` hinzugefügt werden (siehe https://github.com/choffmann/hsfl-awp-clientapp011/pull/1[Pull request #1])
