--- a/Doku/cedrik_hoffmann/README.adoc
+++ b/Doku/cedrik_hoffmann/README.adoc
@@ -5,134 +5,20 @@ Cedrik Hoffmann | 670339 | cedrik.hoffmann@stud.hs-flensburg.de
 :source-highlighter: highlightjs
 :imagesdir: img
 
-== Einleitung
-Auf dem bereits bekannten `MVVM-Grundgerüst` wird ein neues Feature eingebaut. Das Feature soll eine Druckfunktion der gespeicherten Bücher ermöglichen. Dazu wird ein neues Ui-Fenster erstellt. In der Ui kann der Benutzer eine Auswahl an Büchern in einer `ListView` auswählen. Das angeklickte Buch wird im Bereich `Book Preview` im Detail angezeigt. Mit dem Button `Add` wird das gewählte Buch zum Drucken makiert. Es können mehrere Bücher ausgewählt werden. Die ausgewählten Bücher können im Bereich `Selected Books` eingesehen werden. Zudem hat der Benutzer die möglichkeit, ein Buch aus der Liste wieder zu entfernen.
+== Übersicht des Programms aus Nutzersicht
+Wird das Programm gestartet, ladet der User auf der Startseite des Programmes. Siehe hierzu die gemeinsame Kurzanleitung. Möchte der Benutzer, die bereits angelegten Bücher in einer Liste ausdrücken, so bietet das Feature „PrintService“ die Möglichkeit, eine sortierte Liste der gewählten Bücher auszudrucken. 
 
-=== Erstellte Datein
-Auf das `MVVM-Grundgerüst` wurden folgende `Datein / Klassen / Klassenbibliotheken` erstellt:
-[listing]
-----
-Logic
-|-- Logig.Ui
-|   |-- MessageBusMessages
-|   |   |--+ OpenPrintServiceWindowMessage.cs
-|   | 
-|   |-- ViewModel
-|   |   |--+ PrintServiceWindowViewModel.cs
+.Ansicht PrintServiceWindow
+image:UI.png[]
 
-Ui
-|-- Ui.Desktop
-|   |--+ PrintServiceWindow.xaml
-|   |--+ PrintServiceWindow.xaml.cs
+=== Walkthrough
+Wird das `PrintServiceWindow` gestartet, sieht der Benutzer links oben in der Liste `All Books` alle Bücher, welche in der Anwendung bereits angelegt wurden. Unter der Liste befinden sich zwei Buttons, um die gewählten Bücher zur Auswahl hinzuzufügen `[ADD]`, oder das Buch aus der Liste wieder zu entfernen `[REMOVE]`. Die ausgewählten Bücher, welche in der Liste `Selected Books` zu sehen sind, werden anschließend in einer Liste ausgedruckt. Unter dieser Liste verbergen sich wiederum zwei Buttons. Zum einen, um den Druckvorgang zu starten `[PRINT]` und zum anderen, um das Fenster zu schließen `[CLOSE]`, um wieder zur Startseite zu gelangen. Wählt der Benutzer ein Buch in der Liste `All Books` aus, wird die Vorschau mit den entsprechenden Metadaten des Buches angepasst, welches angeklickt wurde. Hat der Benutzer die Bücher, welche ausgedruckt werden sollen, der Liste `Selected Books` hinzugefügt, kann der Benutzer über den Button `[PRINT]` den Druckvorgang starten. Es öffnet sich nun das Standard Windows Druckerfenster, wo der Benutzer seinen Drucker auswählen kann und somit die Liste der Bücher ausgedruckt wird.
 
-Services
-|--+ Services.PrintService
-|    |--+ PrintBookService.cs
-----
+=== Ergänzende Hinweise 
+Der Benutzer hat die Möglichkeit, mittels `STGR + <KLICK AUF BUCH>` mehrere Bücher in der Liste `All Books` auszuwählen. Somit können mehrere Bücher gleichzeitig zur `Selected Book` Liste hinzugefügt werden. Es muss zwingend `>= 1` Buch in der Liste `Selected Books` beim Starten des Druckvorgangs vorhanden sein, ansonsten erscheint eine Meldung, dass nicht genug Bücher in der Liste vorhanden sind und der Druckvorgang wird abgebrochen.
 
-- `PrintServiceWindow.xaml` wird für die Ui verwendet.
-- `PrintServiceWindowViewModel.cs` beschreibt das `ViewModel` zur `View`. `PrintServiceWindow.xaml` hat über den `ViewModelLocator` zugriff auf das ViewModel `PrintServiceWindowViewModel`
-- `OpenPrintServiceWindowMessage.cs` wurde erstellt, damit über den `MessageBus` aus dem `MainWindow` die Ui geöffnet wird.
-- `Services.PrintService` ist somit die entsprechende Klassenbibliothek, welche die Druckfunktion ermöglicht.
-
-== Aufbau / Funktion der Ui
-Im Folgenden werden die einzelnen Design Entscheidungen und Ui-Funktionen beschrieben.
-
-.Ansicht Ui
-image:UI.PNG[]
-
-=== Layout
-Das Layout wird weitesgehend mittels `Grid` realisiert. Knapp 1/3 der Ui wird für die `Auswahl / Hinzufügen / Entfernen / Buttons` der Bücher verwendet. Der restliche Bereich ist für die Darstellung der Bücher im Detail. In der Abbildung ist eine grobe Skizze des Layout zu sehen. 
-
-|===
-|image:GridLayoutGlobal.png[] |image:GridLayoutRow.png[]
-
-|Diese Abbildung illustriert die Aufteilung des "Globalen Grids". 
-|Diese Abbildung illustriert die Aufteilung der einzelnen Reihen der Komponenten. 
-|===
-
-=== Auswahl Bücher
-Die gespiecherten Bücher sind im `ViewModel` in der `BookCollectionViewModel` gespeichert. Beim Aufruf des Ui-Fensters wird die `BookCollectionViewModel` an das `PrintServiceWindowViewModel` übergeben. Da die Ui zugriff auf die `PrintServiceWindowViewModel` hat, kann die Ui bzw. die `ListView` auf die Collection zugreifen und somit in der Ui anzeigen.
-
-=== BookPreview Funktion
+==== Book Preview
 image:BookPreview.gif[]
 
-Die Preview Funktion erfolgt durch `Binding` an das aktuell ausgewählte Element in der `ListView`. Die Eigenschaften des ausgewählte Elements bzw. Buch aus `BookViewModel` wird in der entsprechenden `TextBox` ausgegeben.
-
-[source, xaml]
-----
-<TextBlock FontWeight="Bold" Text="Title: "/>
-<TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Title}"/>
-<TextBlock FontWeight="Bold" Text="Author: "/>
-<TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Author}"/>
-<TextBlock FontWeight="Bold" Text="Weight: "/>
-<TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Weight}"/>
-----
-
-=== Bücher zum drucken hinzufügen
+==== Add Books
 image:AddBooks.gif[]
-
-Wenn der Benutzer ein oder mehrere Bücher auswählt, werden diese in einer neue `Collection` gespeichert, welche anschließend an die Klassenbibliothek  `Service.PrintService` zum drucken weitergeben werden. Die ausgewählten Bücher werden mittels des Buttons `Add` an das ViewModel übergeben. Über das `RelayCommand mit Parametern` werden die Bücher in der `ListView` als `System.Windows.Controls.SelectedItemCollection` an das `ViewModel` übergeben. Ähnliche Logik verbirgt sich auch hinter den Button `Remove`. Unterschied hierbei ist, dass die ausgewählten Bücher nicht der Collection hinzugefügt, sondern entfernt werden. Die Logik hinter den Buttons verbirgt sich im `ViewModel`, welche im Kapitel https://github.com/choffmann/hsfl-awp-clientapp011/tree/cedrik/Doku/cedrik_hoffmann#viewmodel[ViewModle] erläutert werden.
-
-[source, xaml]
-----
-<Button Content="Add" Margin="0,5,5,5" 
-    CommandParameter="{Binding ElementName=BookListBox, Path=SelectedItems}" 
-    Command="{Binding AddSelectedBookToCollection}"  />
-<Button Content="Remove" Margin="5,5,0,5" 
-    CommandParameter="{Binding ElementName=BookListBox, Path=SelectedItems}" 
-    Command="{Binding RemoveSelectedBookToCollection}" />
-----
-
-Der Bereich `Selected Books` zeigt die entsprechende Collection der ausgewählten Bücher an. Diese Komponente ist auch eine `ListView`, welche auf die `CheckedBooks` vom Typ `BookCollectionViewModel` zugreift. Diese `ListView` wurde die Eigenschaft des anwählens mittels dem Parameter `<ListView.ItemContainerStyle>` entfernt.
-
-[source, xaml]
-----
-<ListView Grid.Row="4" ItemsSource="{Binding CheckedBooks}">
-    <ListView.ItemContainerStyle>
-        <Style TargetType="ListViewItem">
-            <Setter Property="Focusable" Value="False"/>
-        </Style>
-    </ListView.ItemContainerStyle>
-    <ListView.ItemTemplate>
-        <DataTemplate>
-            <TextBlock Text="{Binding Title}" />
-        </DataTemplate>
-    </ListView.ItemTemplate>
-</ListView>
-----
-
-== ViewModel
-Im `ViewModel` ist die Logik der Ui definiert. Hier werden die Properties und Funktionen kurz beschrieben.
-
-=== Verfügbare Properties
-- Die Property `BookList` beinhaltet alle bereits angelegten Bücher.
-- In der Property `CheckedBooks` werden alle Bücher abgespeichert, welche der Benutzer zum drucken ausgewählt hat.
-- Die Properties `PrintBooks, CloseWindow` werden zum starten des Druckvorgangs, bzw. zum shcließen des Fensters verwendet.
-- Die Properties `AddSelectedBookToCollection, RemoveSelectedBookToCollection` werden zum hinzufügen, bzw. entfernen der ausgewählten Bücher in `CheckedBooks Collection`.
-
-=== Funktion
-Im folgenden wird die Funktionsweise von der Funktion `AddSelectedBookToCollectionCommand` beschrieben.
-
-[source, c#]
-----
-private void AddSelectedBookToCollectionCommand(object param)
-{
-    System.Collections.IList items = (System.Collections.IList)param; <1>
-    var collection = items.Cast<BookViewModel>(); <2>
-
-    foreach (BookViewModel book in collection) <3>
-    {
-        if(!CheckItemIsInCheckedBooks(book)) <4>
-        {
-            CheckedBooks.Add(book); 
-        }
-    }
-}
-----
-<1> Hier wird das übergebene Objekt, welches vom Typ `System.Windows.Controls.SelectedItemCollection` stammt in einer neuen Liste gespeichert.
-<2> Hier wird die Liste in eine neue Liste vom Typ `BookViewModle` gecastet.
-<3> Nun wird die Colletion durchgegangen und in der `CheckedBooks Collection` hinzugefügt
-<4> `CheckItemIsInCheckedBooks` ist eine Hilfsmethode, welche überprüft, ob ein Buch bereits in der `CheckedBooks Collection` vorhanden ist. Ist dies der Fall, wird dieses Buch dementsprechend nicht nochmal hinzugefügt.
-
-== Service.PrintService
