--- a/Doku/cedrik_hoffmann/README.adoc
+++ b/Doku/cedrik_hoffmann/README.adoc
@@ -15,7 +15,7 @@ image:UI.PNG[]
 Wird das `PrintServiceWindow` gestartet, sieht der Benutzer links oben in der Liste `All Books` alle Bücher, welche in der Anwendung bereits angelegt wurden. Unter der Liste befinden sich zwei Buttons, um die gewählten Bücher zur Auswahl hinzuzufügen `[ADD]`, oder das Buch aus der Liste wieder zu entfernen `[REMOVE]`. Die ausgewählten Bücher, welche in der Liste `Selected Books` zu sehen sind, werden anschließend in einer Liste ausgedruckt. Unter dieser Liste verbergen sich wiederum zwei Buttons. Zum einen, um den Druckvorgang zu starten `[PRINT]` und zum anderen, um das Fenster zu schließen `[CLOSE]`, um wieder zur Startseite zu gelangen. Wählt der Benutzer ein Buch in der Liste `All Books` aus, wird die Vorschau mit den entsprechenden Metadaten des Buches angepasst, welches angeklickt wurde https://github.com/choffmann/hsfl-awp-clientapp011/tree/update_doc/Doku/cedrik_hoffmann#book-preview[siehe Book Preview]. Hat der Benutzer die Bücher, welche ausgedruckt werden sollen, der Liste `Selected Books` hinzugefügt, kann der Benutzer über den Button `[PRINT]` den Druckvorgang starten. Es öffnet sich nun das Standard Windows Druckerfenster, wo der Benutzer seinen Drucker auswählen kann und somit die Liste der Bücher ausgedruckt wird.
 
 === Ergänzende Hinweise 
-Der Benutzer hat die Möglichkeit, mittels `STGR + <KLICK AUF BUCH>` mehrere Bücher in der Liste `All Books` auszuwählen. Somit können mehrere Bücher gleichzeitig zur `Selected Book` Liste hinzugefügt werden. https://github.com/choffmann/hsfl-awp-clientapp011/tree/update_doc/Doku/cedrik_hoffmann#add-books[siehe Add Books] Es muss zwingend `>= 1` Buch in der Liste `Selected Books` beim Starten des Druckvorgangs vorhanden sein, ansonsten erscheint eine Meldung, dass nicht genug Bücher in der Liste vorhanden sind und der Druckvorgang wird abgebrochen.
+Der Benutzer hat die Möglichkeit, mittels `STGR + <KLICK AUF BUCH>` mehrere Bücher in der Liste `All Books` auszuwählen. Somit können mehrere Bücher gleichzeitig zur `Selected Book` Liste hinzugefügt werden https://github.com/choffmann/hsfl-awp-clientapp011/tree/update_doc/Doku/cedrik_hoffmann#add-books[siehe Add Books]. Es muss zwingend `>= 1` Buch in der Liste `Selected Books` beim Starten des Druckvorgangs vorhanden sein, ansonsten erscheint eine Meldung, dass nicht genug Bücher in der Liste vorhanden sind und der Druckvorgang wird abgebrochen.
 
 ==== Book Preview
 image:BookPreview.gif[]
