--- a/Doku/cedrik_hoffmann/README.adoc
+++ b/Doku/cedrik_hoffmann/README.adoc
@@ -1,4 +1,4 @@
-= Anwendungprogrammierung - Dokumentation 
+= Anwendungprogrammierung - Dokumentation zum Feature PrintService
 Cedrik Hoffmann | 670339 | cedrik.hoffmann@stud.hs-flensburg.de
 :icons: font
 :nofooter:
