--- a/Doku/README.adoc
+++ b/Doku/README.adoc
@@ -3,13 +3,6 @@
 :nofooter:
 :source-highlighter: highlightjs
 :imagesdir: img
-:sectnums:
-:sectnumlevels: 3
-:toc: left
-:toclevels: 3
-
-== Verweise
-
 
 == Kurzanleitung
 Wird die Anwendung gestartet, öffnet sich das Hauptfenster. Im Hauptfenster kann zum einen die BookCollection geladen durch die Serialisierung geladen werden, sowie das jeweilige Ui Fenster der Features geöffnet werden.
@@ -23,3 +16,7 @@ Ist die Datei im angegebenden Pfad enthalten, kann nun über den ersten Button "
 
 == Feature Fenster öffnen
 Möchte der User nun eines der Feature ausführen (Ausdruck oder Bib Import), kann dies über die anderen beiden Buttons realisiert werden. Über den Button "Open PrintService Window" öffnet sich die Ui der Druckfunktion. Der Button "Open Bib Import" führt zu der Ui des Features `Import eines Tex-Files (.bib)`
+
+== Verweise
+- https://github.com/choffmann/hsfl-awp-clientapp011/tree/update_doc/Doku/cedrik_hoffmann[PrintService Dokumentation]
+- https://github.com/choffmann/hsfl-awp-clientapp011/blob/update_doc/Doku/dimi_dorn/017-Doku-AWP-Hausarbreit.pdf[Import Tex-Files Dokumentation]
